Safe instatiation