@@ -22,6 +22,7 @@ import java.awt.datatransfer.Clipboard;
 import java.awt.font.TextAttribute;
 import java.awt.im.InputMethodHighlight;
 import java.awt.image.*;
+import java.lang.reflect.InvocationTargetException;
 import java.net.URL;
 import java.util.Map;
 import java.util.Properties;
@@ -170,7 +171,7 @@ public class MyHeadlessToolkit extends Toolkit {
                     throw new AWTError("Toolkit not found: " + preferredToolkit);
                 }
                 if (cls != null) {
-                    localToolKit = (Toolkit)cls.newInstance();
+                    localToolKit = (Toolkit) cls.getConstructor().newInstance();
                     if (GraphicsEnvironment.isHeadless()) {
                     	localToolKit = new HeadlessToolkit(localToolKit);
                     }
@@ -179,6 +180,10 @@ public class MyHeadlessToolkit extends Toolkit {
                 throw new AWTError("Could not instantiate Toolkit: " + preferredToolkit);
             } catch (IllegalAccessException e) {
                 throw new AWTError("Could not access Toolkit: " + preferredToolkit);
-            }
+            } catch (NoSuchMethodException e) {
+				throw new AWTError("Could not instantiate Toolkit: " + preferredToolkit);
+			} catch (InvocationTargetException e) {
+				throw new AWTError("Could not instantiate Toolkit: " + preferredToolkit);
+			}
 	}
 }
